Fixes #14 narrower letter-spacing for paragraphs

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -25,6 +25,7 @@ a:hover * {
 }
 p {
   margin-bottom: 24px;
+  letter-spacing: 1px;
 }
 p a {
   text-decoration: underline;
